--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "server": "json-server --watch db.json --port 3333"
+    "server": "json-server --watch db.json --port 3333",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.tsx"
+    ]
   },
   "dependencies": {
     "@expo-google-fonts/pt-sans-caption": "^0.4.0",
@@ -44,9 +51,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^53.0.9",
     "json-server": "^1.0.0-beta.3",
     "typescript": "~5.8.3"
   },
